PRList jsonmodel fix version

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -111,6 +111,13 @@
           "target": [
             "PRDetail"
           ]
+        },
+        {
+          "name": "newPR",
+          "pattern": "newPR/:copy:",
+          "target": [
+            "PRDetail"
+          ]
         }
       ],
       "targets": {
