--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -57,7 +57,8 @@
       "libs": {
         "sap.ui.layout": {},
         "sap.ui.core": {},
-        "sap.m": {}
+        "sap.m": {},
+        "sap.ui.unified": {}
       }
     },
     "contentDensities": {
