Functions added:  + Create + Copy ** Account asssignment is not working  + Delete (single/multi) PR

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -58,7 +58,8 @@
         "sap.ui.layout": {},
         "sap.ui.core": {},
         "sap.m": {},
-        "sap.ui.unified": {}
+        "sap.ui.unified": {},
+        "sap.uxap": {}
       }
     },
     "contentDensities": {
