Functions added:  + Add messages to response from back-end ** Account asssignment is ACTUALLY working  + Delete (single/multi) PR    ++ this function works + return message in good + exceptional cases

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -124,7 +124,7 @@
         },
         {
           "name": "itemDetail",
-          "pattern": "itemDetail/{PreqItem}/:edit:",
+          "pattern": "PRDetail/:PreqNo:/itemDetail/{PreqItem}/:edit:",
           "target": [
             "ItemDetail"
           ]
