Function added:  + DocumentFlow Functions that actually run:  + Delete Pr_header, Pr_item, Create (w/o acctass), update

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -128,6 +128,15 @@
           "target": [
             "ItemDetail"
           ]
+        },
+        {
+          "name": "DocumentFlow",
+          "pattern": "DocumentFlow/{PreqNo}/{PreqItem}",
+          "titleTarget": "",
+          "greedy": false,
+          "target": [
+            "DocumentFlow"
+          ]
         }
       ],
       "targets": {
@@ -142,6 +151,10 @@
         "ItemDetail": {
           "viewType": "XML",
           "viewName": "ItemDetail"
+        },
+        "DocumentFlow": {
+          "viewType": "XML",
+          "viewName": "DocumentFlow"
         }
       }
     }
